# bazel_libzstd

./: BUILD.bazel  MODULE.bazel  README.md  test.cc
.bcr/: metadata.template.json
integration/: BUILD.bazel  MODULE.bazel
